music no longer plays by default

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <head>
     <title> Nicolas Mitchell (now in website form) </title>
     <link rel = "stylesheet" href = "style.css">
-    
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
 
 <body>
-    <audio id = "musicPlayer" autoplay = "autoplay"><source src = "elevator.mp3" /> </audio>
+    <audio id = "musicPlayer" ><source src = "elevator.mp3" /> </audio>
     <div class = "centerpiece">
         <h1>
             Welcome! I'm sorry, but this site is currently under construction. Please come back later.
@@ -17,7 +17,7 @@
     <script src ="musicPlayer.js"></script>
     <h2>
     <div id = "musicButton" onclick ="toggleAudio()">
-        Music on
+        Music
     </div>
     </h2>
 </body>
