--- a/index.html
+++ b/index.html
@@ -5,10 +5,28 @@
 </head>
 
 <body>
+    <div class = "navbar">
+        <table>
+            <tr>
+                <td>
+                    <a href = "underconstruction.html">About</a>
+                </td>
+                <td>
+                    <a href = "underconstruction.html">Projects</a>
+                </td>
+                    <td>
+                        <a href  = "coopresume.pdf">
+                    Resume
+                        </a>
+                    </td>
+                
+            </tr>
+        </table>
+    </div><br><br><br><br>
     <audio id = "musicPlayer" ><source src = "elevator.mp3" /> </audio>
     <div class = "centerpiece">
         <h1>
-            Welcome! I'm sorry, but this site is currently under construction. Please come back later.
+            Welcome! Please excuse the mess. This site is under construction.
         </h1>
         <a href = "https://github.com/nicomitchell">GitHub</a>
         | 
