--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <a href = "underconstruction.html">Projects</a>
                 </td>
                     <td>
-                        <a href  = "coopresume.pdf">
+                        <a href  = "resume-plain.pdf">
                     Resume
                         </a>
                     </td>
