--- a/index.html
+++ b/index.html
@@ -1,41 +1,46 @@
-<head>
-    <title> Nicolas Mitchell (now in website form) </title>
-    <link rel = "stylesheet" href = "style.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-</head>
+<html lang="en">
+    <head>
+        <title> Nicolas Mitchell</title>
+        <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
+        
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+        <link rel="stylesheet" href="style.css">
 
-<body>
-    <div class = "navbar">
-        <table>
-            <tr>
-                <td>
-                    <a href = "underconstruction.html">About</a>
-                </td>
-                <td>
-                    <a href = "underconstruction.html">Projects</a>
-                </td>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    </head>
+    <body>
+        <div class = "navbar">
+            <table>
+                <tr>
                     <td>
-                        <a href  = "resume-plain.pdf">
-                    Resume
-                        </a>
+                        <a href = "underconstruction.html">About</a>
                     </td>
-                
-            </tr>
-        </table>
-    </div><br><br><br><br>
-    <audio id = "musicPlayer" ><source src = "elevator.mp3" /> </audio>
-    <div class = "centerpiece">
-        <h1>
-            Welcome! Please excuse the mess. This site is under construction.
-        </h1>
-        <a href = "https://github.com/nicomitchell">GitHub</a>
-        | 
-        <a href = "https://www.linkedin.com/in/nicolas-mitchell-b22185149/">LinkedIn</a>
-    </div>
-    <script src ="musicPlayer.js"></script>
-    <h2>
-    <div id = "musicButton" onclick ="toggleAudio()">
-        Music
-    </div>
-    </h2>
-</body>
+                    <td>
+                        <a href = "underconstruction.html">Projects</a>
+                    </td>
+                    <td>
+                        <a href  = "resume-plain.pdf">Resume</a>
+                    </td>
+                </tr>
+            </table>
+        </div>
+        <br><br><br><br>
+        <audio id = "musicPlayer" ><source src = "elevator.mp3" /> </audio>
+        <div class = "centerpiece">
+            <h1>
+                Welcome! Please excuse the mess. This site is under construction.
+            </h1>
+            <a href = "https://github.com/nicomitchell">GitHub</a>
+            | 
+            <a href = "https://www.linkedin.com/in/nicolas-mitchell-b22185149/">LinkedIn</a>
+        </div>
+        <script src ="musicPlayer.js"></script>
+        <h2>
+        <div id = "musicButton" onclick ="toggleAudio()">
+            Music
+        </div>
+        </h2>
+    </body>
+</html>
