--- a/WIP/index.html
+++ b/WIP/index.html
@@ -130,7 +130,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
                       <p>
                           -Developed a backend web API to automate and simplify internal processes. <br>
                           -Wrote robust unit and integration tests for software packages. <br>
-                          -Built concurrent solutions to speed up several high-volume processes. <br> 
+                          -Built concurrency-based software to speed up several high-volume processes. <br> 
                           -Created database accessor software for several relational and NoSQL databases including MongoDB, PostgreSQL, Cassandra, and Aerospike.</p>
                   </div>
                   <div class="resume-date text-md-right">
@@ -139,35 +139,17 @@ License URL: https://creativecommons.org/licenses/by/4.0/
                 </div>  
               </div>
               <div class="resume-item col-md-6 col-sm-12">
-                <div class="card mx-0 p-4 mb-5" style="border-color: #ffc107; box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.21);">
-                  <div class="resume-content mr-auto">
-                      <h4 class="mb-3"><i class="fa fa-laptop mr-3 text-warning"></i>  Web Developer</h4>
-                      <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
-                  </div>
-                  <div class="resume-date text-md-right">
-                      <span class="text-primary">December 2018 - March 2019</span>
-                  </div>
-                </div>  
-              </div>
-              <div class="resume-item col-md-6 col-sm-12">
                 <div class="card mx-0 p-4 mb-5" style="border-color: #28a745; box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.21);">
                   <div class="resume-content mr-auto">
-                      <h4 class="mb-3"><i class="fa fa-camera mr-3 text-success"></i> Junior Web Designer</h4>
-                      <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                      <h4 class="mb-3"><i class="fa fa-camera mr-3 text-success"></i>Student Tutor - REACH</h4>
+                    <p>
+                            - Provide drop-in tutoring students in introductory programming and data structures classes.<br>
+                            - Lead test reviews and group sessions for computer science classes.<br>
+                            - Provide IT support to students and faculty.
+                    </p>
                   </div>
                   <div class="resume-date text-md-right">
-                      <span class="text-primary">July 2017 - December 2018</span>
-                  </div>
-                </div>  
-              </div>
-              <div class="resume-item col-md-6 col-sm-12">
-                <div class="card mx-0 p-4 mb-5" style="border-color: #2196f3; box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.21);">
-                  <div class="resume-content mr-auto">
-                      <h4 class="mb-3"><i class="fa fa-area-chart mr-3 text-primary"></i> Web Design Intern</h4>
-                      <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
-                  </div>
-                  <div class="resume-date text-md-right">
-                      <span class="text-primary">September 2018 - June 2019</span>
+                      <span class="text-primary">August 2017 - Present</span>
                   </div>
                 </div>  
               </div>
@@ -177,7 +159,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
     <!--====================================================
                         PORTFOLIO
     ======================================================-->      
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="portfolio"> 
+      <!-- <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="portfolio"> 
           <div class="row my-auto">
               <div class="col-12">
                 <h2 class="  text-center">Portfolio</h2>
@@ -284,7 +266,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
                   </a>
               </div> 
           </div>
-      </section>
+      </section> -->
 
     <!--====================================================
                         SKILLS
@@ -328,7 +310,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
     <!--====================================================
                            AWARDS
     ======================================================-->       
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
+      <!-- <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
           <div class="row my-auto">
               <div class="col-12">
                 <h2 class="  text-center">Awards</h2>
@@ -357,7 +339,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
                   </div>
               </div>
           </div>
-      </section> 
+      </section>  -->
 
     <!--====================================================
                           CONTACT
@@ -426,7 +408,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
 <!--====================================================
                     PORTFOLIO MODALS
 ======================================================-->
-    <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true" >
+    <!-- <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true" >
       <div class="modal-dialog" role="document">
           <div class="modal-content">
               <div class="close-modal" data-dismiss="modal">
@@ -884,7 +866,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
             </div>
             </div>
         </div>
-    </div>    
+    </div>     -->
 
 
     <!-- Global javascript -->
