--- a/pt-br/index.html
+++ b/pt-br/index.html
@@ -176,7 +176,7 @@
       
         
           <li>
-            <a href="https://www.linkedin.com/in/johndoe/" aria-label="LinkedIn"   >
+            <a href="https://www.linkedin.com/in/nicolas-mitchell-b22185149/" aria-label="LinkedIn"   >
               <i class="fa fa-linkedin" aria-hidden="true"></i>
             </a>
           </li>
